# test_predicates

./: README.md  pyproject.toml
src/treats/: testing_treats.py  treats.py
tests/: test_data.py  test_treats.py
