[tool.poetry]
name = "test_predicates"
version = "0.1.0"
description = "Finding test data for predicates"
authors = ["Sierra Taylor Moxon <sierra.taylor@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.26.0"
jsonschema = "^4.3.1"
parse = "^1.19.0"
bmt = "^0.8.1"
jupyter = "^1.0.0"
linkml-runtime = "^1.2.16"
linkml = "^1.2.13"
oaklib = "*"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
