[tool.poetry]
name = "test_predicates"
version = "0.1.0"
description = "Finding test data for predicates"
authors = ["Sierra Taylor Moxon <sierra.taylor@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.26.0"
jsonschema = "^4.3.1"
oaklib = "^0.1.33"
linkml-runtime = "^1.3.0"


[tool.poetry.dev-dependencies]
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
